Add mockito test implementation dependency
Gradle setup EMB-7 [IN PROGRESS] -> [PAUSED]