@@ -7,10 +7,12 @@ repositories {
 }
 
 test {
+    jvmArgs('-XX:+EnableDynamicAgentLoading')
     useJUnitPlatform()
 }
 
 dependencies {
     testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.10.1'
     testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.10.1'
+    testImplementation group: 'org.mockito', name: 'mockito-core', version: '5.9.0'
 }
